--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,44 @@
+systemd (215-12) unstable; urgency=medium
+
+  [ Martin Pitt ]
+  * debian/udev.README.Debian: Trim the parts which are obsolete, wrong, or
+    described in manpages. Only keep the Debian specific bits.
+    (Part of #776546)
+  * Actually install udev's README.Debian when building for Debian.
+    (Closes: #776546)
+  * Only start logind if dbus is installed. This fixes the noisy startup
+    failure in environments without dbus such as LXC containers or servers.
+    (part of #772700)
+  * Add getty-static.service unit which starts getty@.service on tty 2 to 6 if
+    dbus is not installed, and hence logind cannot auto-start them on demand.
+    (Closes: #772700)
+  * Add unit-config autopkgtest to check systemd unit/sysv init enabling and
+    disabling via systemctl. This avoids bugs like #777613 (did not affect
+    unstable).
+  * cgroup: Don't trim cgroup trees created by someone else, just the ones
+    that systemd itself created. This avoids cleaning up empty cgroups from
+    e.g. LXC. (Closes: #777601)
+  * boot-and-services autopkgtest: Add CgroupsTest to check cgroup
+    creation/cleanup behaviour. This reproduces #777601 and verifies the fix
+    for it.
+  * rules: Fix by-path of mmc RPMB partitions and don't blkid them. Avoids
+    kernel buffer I/O errors and timeouts. (LP: #1333140)
+  * Document systemctl --failed option. (Closes: #767267)
+
+  [ Michael Biebl ]
+  * core: Don't fail to run services in --user instances if $HOME is missing.
+    (Closes: #759320)
+
+  [ Didier Roche ]
+  * default-display-manager-generator: Avoid unnecessary /dev/null symlink and
+    warning if there is no display-manager.service unit.
+
+ -- Martin Pitt <mpitt@debian.org>  Fri, 13 Feb 2015 12:08:31 +0100
+
 systemd (215-11) unstable; urgency=medium
 
   [ Martin Pitt ]
-  * escape-beef-up-new-systemd-escape-tool.patch: Avoid creating a danling
+  * escape-beef-up-new-systemd-escape-tool.patch: Avoid creating a dangling
     symlink, to work around regression in recent patch (see #776257).
   * Order ifup@.service and networking.service after network-pre.target.
     (Closes: #766938)
