--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+systemd (218-10) experimental; urgency=medium
+
+  * Pull latest keymaps from upstream git. (LP: #1334968, #1409721)
+  * rules: Fix by-path of mmc RPMB partitions and don't blkid them. Avoids
+    kernel buffer I/O errors and timeouts. (LP: #1333140)
+  * Clean up stale mounts when ejecting CD drives with the hardware eject
+    button. (LP: #1168742)
+  * Document systemctl --failed option. (Closes: #767267)
+  * Quiesce confusing and irrelevant "failed to reset devices.list" warning.
+    (LP: #1413193)
+  * When booting with systemd-bootchart, default to run systemd rather than
+    /sbin/init (which might not be systemd). (LP: #1417059)
+  * boot-and-services autopkgtest: Add CgroupsTest to check cgroup
+    creation/cleanup behaviour. This reproduces #777601 and verifies the fix
+    for it.
+
+ -- Martin Pitt <mpitt@debian.org>  Fri, 13 Feb 2015 12:25:06 +0100
+
 systemd (218-9) experimental; urgency=medium
 
   [ Martin Pitt ]
