Import patches-unapplied version 219-2 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: f805f1633d02f186d4d5b498bb0412b232701b42

New changelog entries:
  * Fix UTF-16 to UTF-8 conversion on big-endian machines. (Closes: #778654)
  * Disable new new test-sigbus, it fails on some buildds due to too old
    kernels. (part of #778654)
  * debian/README.Debian, debian/systemd.postinst: Drop setfacl call for
    /var/log/journal, this is now done automatically by tmpfiles.d/systemd.conf.
  * Drop "acl" dependency, not necessary any more with the above.
  * debian/tests/boot-and-services: Move to using /var/lib/machines/,
    /var/lib/containers is deprecated.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+systemd (219-2) experimental; urgency=medium
+
+  * Fix UTF-16 to UTF-8 conversion on big-endian machines. (Closes: #778654)
+  * Disable new new test-sigbus, it fails on some buildds due to too old
+    kernels. (part of #778654)
+  * debian/README.Debian, debian/systemd.postinst: Drop setfacl call for
+    /var/log/journal, this is now done automatically by tmpfiles.d/systemd.conf.
+  * Drop "acl" dependency, not necessary any more with the above.
+  * debian/tests/boot-and-services: Move to using /var/lib/machines/,
+    /var/lib/containers is deprecated.
+
+ -- Martin Pitt <mpitt@debian.org>  Wed, 18 Feb 2015 15:29:42 +0100
+
 systemd (219-1) experimental; urgency=medium
 
   [ Martin Pitt ]
