--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+systemd (219-4ubuntu5) vivid; urgency=medium
+
+  * Merge from experimental branch:
+    - /lib/lsb/init-functions.d/40-systemd: Don't ignore systemd unit
+      dependencies in "degraded" mode. (LP: #1429734)
+    - rules-ubuntu/71-power-switch-proliant.rules: Add support for HP ProLiant
+      m400 Server Cartridge soft powerdown on Linux 3.16. (LP: #1428811)
+  * systemctl: Don't forward telinit u to upstart. This works around upstart's
+    Restart() always reexec'ing /sbin/init on Restart(), even if that changes
+    to point to systemd during the upgrade. This avoids running systemd during
+    a dist-upgrade. (LP: #1430479)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 11 Mar 2015 11:01:36 +0100
+
 systemd (219-4ubuntu4) vivid; urgency=medium
 
   * debian/udev.postinst: Only call update-initramfs if it actually exists.
@@ -25,6 +39,12 @@ systemd (219-5) UNRELEASED; urgency=medium
   * Check for correct architecture identifiers for SuperH. (Closes: #779710)
   * Fix tmpfiles.d to only apply the first match again (regression in 219).
     (LP: #1428540)
+  * /lib/lsb/init-functions.d/40-systemd: Don't ignore systemd unit
+    dependencies in "degraded" mode. (LP: #1429734)
+
+  [ Craig Magina ]
+  * rules-ubuntu/71-power-switch-proliant.rules: Add support for HP ProLiant
+    m400 Server Cartridge soft powerdown on Linux 3.16. (LP: #1428811)
 
  -- Martin Pitt <mpitt@debian.org>  Tue, 03 Mar 2015 14:51:46 +0100
 
